Complete chat api